--- a/languages.toml
+++ b/languages.toml
@@ -605,9 +605,10 @@ name = "lua"
 scope = "source.lua"
 file-types = ["lua"]
 shebangs = ["lua"]
-roots = []
+roots = [".luarc.json", ".luacheckrc", ".stylua.toml", "selene.toml", ".git"]
 comment-token = "--"
 indent = { tab-width = 2, unit = "  " }
+language-server = { command = "lua-language-server", args = [] }
 
 [[grammar]]
 name = "lua"
