--- a/runtime/themes/onelight.toml
+++ b/runtime/themes/onelight.toml
@@ -79,7 +79,7 @@
 "ui.selection" = { bg = "light-white" }
 "ui.selection.primary" = { bg = "light-white", modifiers = ["dim"] }
 
-"ui.virtual" = { fg = "light-white"}
+"ui.virtual.whitespace" = { fg = "light-white"}
 "ui.virtual.ruler" = { bg = "light-white" }
 "ui.virtual.whitespace" = {fg = "light-white" }
 
