--- a/helix-term/Cargo.toml
+++ b/helix-term/Cargo.toml
@@ -29,6 +29,7 @@ helix-view = { version = "0.6", path = "../helix-view" }
 helix-lsp = { version = "0.6", path = "../helix-lsp" }
 helix-dap = { version = "0.6", path = "../helix-dap" }
 helix-loader = { version = "0.6", path = "../helix-loader" }
+helix-plugins = { version = "0.6", path = "../helix-plugins" }
 
 anyhow = "1"
 once_cell = "1.13"
