--- a/runtime/themes/ingrid.toml
+++ b/runtime/themes/ingrid.toml
@@ -59,6 +59,7 @@
 # "ui.cursor.match"  # TODO might want to override this because dimmed is not widely supported
 "ui.menu" = { fg = "#7B91B3", bg = "#F3EAE9" }
 "ui.menu.selected" = { fg = "#D74E50", bg = "#F3EAE9" }
+"ui.menu.highlighted" = { fg = "#D74E50" }
 
 "warning" = "#D4A520"
 "error" = "#D74E50"
