--- a/theme.toml
+++ b/theme.toml
@@ -71,6 +71,7 @@ label = "honey"
 "ui.menu" = { fg = "lavender", bg = "revolver" }
 "ui.menu.selected" = { fg = "revolver", bg = "white" }
 "ui.menu.scroll" = { fg = "lavender", bg = "comet" }
+"ui.menu.highlighted" = { fg = "almond"}
 
 diagnostic = { modifiers = ["underlined"] }
 # "diagnostic.hint" = { fg = "revolver", bg = "lilac" }
