--- a/helix-tui/Cargo.toml
+++ b/helix-tui/Cargo.toml
@@ -16,6 +16,7 @@ include = ["src/**/*", "README.md"]
 default = ["crossterm"]
 
 [dependencies]
+palette = "0.6"
 bitflags = "1.3"
 cassowary = "0.3"
 unicode-segmentation = "1.9"
