--- a/runtime/themes/onedark.toml
+++ b/runtime/themes/onedark.toml
@@ -73,6 +73,7 @@ diagnostic = { modifiers = ["underlined"] }
 "ui.window" = { bg = "gray" }
 "ui.menu" = { fg = "white", bg = "gray" }
 "ui.menu.selected" = { fg = "black", bg = "blue" }
+"ui.menu.scroll" = { fg = "white", bg = "light-gray" }
 
 [palette]
 
