--- a/theme.toml
+++ b/theme.toml
@@ -69,6 +69,7 @@ label = "honey"
 
 "ui.menu" = { fg = "lavender", bg = "revolver" }
 "ui.menu.selected" = { fg = "revolver", bg = "white" }
+"ui.menu.scroll" = { fg = "lavender", bg = "comet" }
 
 diagnostic = { modifiers = ["underlined"] }
 # "diagnostic.hint" = { fg = "revolver", bg = "lilac" }
