--- a/runtime/themes/autumn.toml
+++ b/runtime/themes/autumn.toml
@@ -13,13 +13,15 @@
 "ui.linenr" = { fg = "my_gray4", bg = "my_gray2" }
 "ui.popup" = { bg = "my_gray2" }
 "ui.window" = { fg = "my_gray4", bg = "my_gray2" }
-"ui.linenr.selected" = { fg = "my_gray6", bg = "my_gray2", modifiers = ["bold"]}
+"ui.linenr.selected" = { fg = "my_gray6", bg = "my_gray1"}
 "ui.selection" = { bg = "my_gray3" }
 "comment" = { fg = "my_gray4", modifiers = ["italic"] }
 "ui.statusline" = { fg = "my_gray6", bg = "my_gray2" }
 "ui.statusline.inactive" = { fg = 'my_gray4', bg = 'my_gray2' }
 "ui.cursor" = { fg = "my_gray5", modifiers = ["reversed"] }
 "ui.cursor.primary" = { fg = "my_white", modifiers = ["reversed"] }
+"ui.cursorline.primary" = { bg = "my_black" }
+"ui.cursorline.secondary" = { bg = "my_black" }
 "ui.text" = "my_white"
 "operator" = "my_white"
 "ui.text.focus" = "my_white"
@@ -64,6 +66,7 @@
 "error" = "my_red"
 
 [palette]
+my_black      = "#242424" # Cursorline
 my_gray0      = "#292929" # Default Background
 my_gray1      = "#2e2e2e" # Ruler
 my_gray2      = "#3a3a3a" # Lighter Background (Used for status bars, line number and folding marks)
