--- a/runtime/themes/nord_light.toml
+++ b/runtime/themes/nord_light.toml
@@ -1,65 +1,67 @@
 # Author: Two-Six<twopsix@duck.com>
 
-"ui.background" = {bg="bg"}
-"ui.text" = "black"
+"ui.background" = {bg="nord6"}
+"ui.text" = "nord0"
 "ui.selection" = {bg="bold_blue"}
-"ui.statusline" = {bg="bold_white"}
+"ui.statusline" = {bg="nord4"}
 "ui.statusline.inactive" = {bg="white"}
 "ui.virtual" = "bold_white"
-"ui.cursor.match" = {bg="bold_white"}
-"ui.cursor" = {bg="cursor_blue", fg="bg"}
-"ui.linenr" = {fg="gray"}
-"ui.linenr.selected" = {fg="black", bg="bold_white"}
-"ui.menu" = {bg="bold_white"}
-"ui.menu.selected" = {bg="bold_blue"}
-"ui.popup" = {bg="bold_white"}
+"ui.cursor.match" = {bg="bold_gray"}
+"ui.cursor" = {bg="nord10", fg="nord6"}
+"ui.cursorline.primary" = {bg="nord5"}
+"ui.linenr" = {fg="nord7"}
+"ui.linenr.selected" = {fg="nord0", bg="nord5"}
+"ui.menu" = {bg="nord4"}
+"ui.menu.selected" = {bg="nord5"}
+"ui.popup" = {bg="nord4"}
 
-"diagnostic.error" = {fg="red", modifiers=["bold"]}
-"diagnostic.warning" = {bg="gray", modifiers=["bold"]}
-"diagnostic.hint" = {bg="white", modifiers=["bold"]}
+"diagnostic.error" = {fg="nord11", modifiers=["bold"]}
+"diagnostic.warning" = {bg="nord13", modifiers=["bold"]}
+"diagnostic.hint" = {fg="nord13", modifiers=["bold"]}
 
-"constant.numeric" = {fg="red", modifiers=["bold"]}
-"constant.builtin" = {fg="const_built"}
+"constant.numeric" = {fg="nord15"}
+"constant.builtin" = {fg="nord15"}
 
-"keyword" = {fg="blue"}
-"keyword.control" = {fg="blue"}
-"keyword.function" = {fg="blue"}
+"keyword" = {fg="nord2"}
+"keyword.control" = {fg="nord2"}
+"keyword.function" = {fg="nord2"}
 
-"function" = {fg="light_green"}
-"function.macro" = {fg="blue", modifiers=["bold"]}
-"function.method" = {fg="black"}
-"function.builtin" = {fg="red"}
+"function" = {fg="nord3"}
+"function.macro" = {fg="nord10", modifiers=["bold"]}
+"function.method" = {fg="nord0"}
+"function.builtin" = {fg="nord10"}
 
-"variable.builtin" = {fg="blue"}
-"variable.other" = {fg="red"}
-"variable" = {fg="purple"}
+"variable.builtin" = {fg="nord3"}
+"variable.other" = {fg="nord3"}
+"variable" = {fg="nord0"}
 
-"string" = "green"
-"comment" = "bold_gray"
-"namespace" = {fg="red"}
-"attribute" = {fg="yellow"}
-"type" = {fg="yellow"}
+"string" = "nord14"
+"comment" = "nord7"
+"namespace" = {fg="nord10"}
+"attribute" = {fg="nord10"}
+"type" = {fg="nord10"}
 
-"markup.heading" = {fg="red", modifiers=["bold"]}
-"markup.raw" = {bg="bold_blue", fg="green"}
-"markup.link.url" = {fg="red"}
-"markup.link.text" = {fg="blue"}
-"markup.quote" = {fg="bold_gray", modifiers=["italic"]}
+"markup.heading" = {fg="nord0", modifiers=["bold"]}
+"markup.raw" = {fg="nord10"}
+"markup.link.url" = {fg="nord3"}
+"markup.link.text" = {fg="nord12"}
+"markup.quote" = {fg="nord3", modifiers=["italic"]}
 
 
 [palette]
-white = "#ffffff"
-bold_white = "#d8dee9"
-bg = "#e5e9f0"
-gray = "#bec7d8"
-black = "#3b4252"
-bold_blue = "#b8c5db"
-green = "#065905"
-light_green = "#29838d"
-const_built = "#4b7aaf"
-blue = "#3b6ea8"
-cursor_blue = "#5d86b6"
-red = "#97365b"
-yellow = "#a18017"
-purple = "#842879"
-bold_gray = "#828b9b"
+nord0 = "#2E3440"
+nord1 = "#3B4252"
+nord2 = "#434C5E"
+nord3 = "#4C566A"
+nord4 = "#D8DEE9"
+nord5 = "#E5E9F0"
+nord6 = "#ECEFF4"
+nord7 = "#8FBCBB"
+nord8 = "#88C0D0"
+nord9 = "#81A1C1"
+nord10 = "#5E81AC"
+nord11 = "#BF616A"
+nord12 = "#D08770"
+nord13 = "#EBCB8B"
+nord14 = "#A3BE8C"
+nord15 = "#B48EAD"
