--- a/helix-plugins/Cargo.toml
+++ b/helix-plugins/Cargo.toml
@@ -3,6 +3,9 @@ name = "helix-plugins"
 version = "0.6.0"
 edition = "2021"
 
+[features]
+serde = []
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
@@ -11,8 +14,6 @@ helix-loader = { version = "0.6", path = "../helix-loader" }
 wasmtime = "0.38.1"
 wasmtime-wasi = "0.38.1"
 log = "0.4"
-protobuf = "3.0.3"
-crossterm = "0.23"
-
-[build-dependencies]
-protobuf-codegen = "3.0.3"
+crossterm = { version = "0.23", features = ["serde"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
