--- a/runtime/themes/catppuccin_latte.toml
+++ b/runtime/themes/catppuccin_latte.toml
@@ -70,8 +70,9 @@
 "ui.statusline.insert" = { fg = "surface0", bg = "green", modifiers = ["bold"]  }
 "ui.statusline.select" = { fg = "surface0", bg = "flamingo", modifiers = ["bold"]  }
 
-"ui.bufferline" = { fg = "overlay2", bg = "surface1" }
-"ui.bufferline.active" = { fg = "text", bg = "surface0" }
+"ui.bufferline" = { fg = "overlay2", bg = "surface1", modifiers = ["italic"] }
+"ui.bufferline.active" = { fg = "text", bg = "surface0", modifiers = ["bold"] }
+"ui.bufferline.background" = { bg = "surface1" }
 
 "ui.popup" = { fg = "text", bg = "surface0" }
 "ui.window" = { fg = "crust" }
